--- a/server/index.html
+++ b/server/index.html
@@ -10,6 +10,7 @@
     <link href="/css/animate.css" rel="stylesheet">
 	<link href="/css/main.css" rel="stylesheet">
 	<link href="/css/responsive.css" rel="stylesheet">
+	<link rel="stylesheet" href="./public/css/style.css">
 </head>
 <body>
 	<div id="app"></div>
